# clubcast2-hs

./: .gitignore  .travis.yml  LICENSE.md  README.md  clubcast2-hs.cabal  stack.yaml
app/: Main.hs
src/: Clubcast.hs  Main.hs
src/Clubcast/: Downloader.hs  Episode.hs  Exceptions.hs  Parser.hs  Podcast.hs  Types.hs
test/: ClubcastSpec.hs
