name:                clubcast2-hs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/narrative/clubcast2-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2016 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable clubcast2-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , data-default
                     , exceptions
                     , http-conduit
                     , tagsoup
                     , text
                     , time
                     , transformers

test-suite spec
  type:             exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  main-is:            Spec.hs
  build-depends:      base >= 4.7 && < 5
                    , hspec
                    , QuickCheck
                    , bytestring
                    , aeson

