name:                clubcast2-hs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/narrative/clubcast2-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2016 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable clubcast2-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , clubcast2-hs
                     , http-conduit
                     , mtl
                     , resourcet
                     , text

library
  hs-source-dirs:      src
  exposed-modules:     Clubcast
                     , Clubcast.Downloader
                     , Clubcast.Episode
                     , Clubcast.Parser
                     , Clubcast.Podcast
                     , Clubcast.Types
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.10.0.0 && <= 1.0.0.0
                     , bytestring
                     , conduit
                     , conduit-extra
                     , data-default
                     , directory
                     , exceptions
                     , http-conduit
                     , http-types
                     , monad-control
                     , mtl
                     , random
                     , resourcet
                     , safe
                     , stm
                     , tagsoup
                     , text
                     , time
                     , transformers
                     , transformers-base

test-suite spec
  type:             exitcode-stdio-1.0
  default-language:   Haskell2010
  other-modules:      ClubcastSpec
  hs-source-dirs:     test
  ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  main-is:            Spec.hs
  build-depends:      base >= 4.7 && < 5
                    , aeson
                    , bytestring
                    , clubcast2-hs
                    , http-conduit
                    , hspec
                    , QuickCheck
                    , tagsoup
                    , text
                    , time
                    , transformers

